# galaxy-chop

./: .coverage  .gitignore  .header-template  .travis.yml  CHANGELOG.md  CMakeLists.txt  Descomposicion_dinamica.ipynb  LICENSE  LICENSE.txt  MANIFEST.in  README.md  equal_number.py  ez_setup.py  generador_archivos_para_correr_potencial.ipynb  meson.build  potencial.f90  potencial_TNG.f90  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: CI.yml  Docs.yml  GalaxyChop_CI.yml  GalaxyChop_py37.yml  GalaxyChop_py38.yml  fortran_version_CI.yml  nobackend_CI.yml  publish.yml  tests.yml  unittests.yml
docs/: Makefile  requirements.txt  tutorial.ipynb
docs/source/: conf.py  index.rst  installation.rst  license.rst  tutorial.ipynb
docs/source/_static/css/: galaxychop.css
docs/source/api/: constants.rst  data.rst  galaxychop.rst  index.rst  io.rst  models.rst  modules.rst  plot.rst  preproc.rst  utils.rst
docs/source/api/core/: data.rst  index.rst  plot.rst  sdynamics.rst
docs/source/api/models/: _base.rst  gaussian_mixture.rst  histogram.rst  index.rst  kmeans.rst  threshold.rst
docs/source/api/preproc/: circ.rst  index.rst  pcenter.rst  potential_energy.rst  salign.rst  smr_crop.rst
docs/source/api/preproc/fortran/: index.rst  potential.f95.rst
docs/source/api/utils/: decorators.rst  index.rst
docs/source/tutorials/: decomposers.ipynb  gal394242.h5  galaxies.ipynb  index.rst  installation.rst  plotting.ipynb  pre-proccesing_and_decomposition.ipynb  quickstart.ipynb
galaxy-chop/: density.py  galaxy-chop.py  utils.py
galaxychop/: __init__.py  constants.py  core.py  data.py  dataset.py  galaxychop.py  io.py  models.py  plot.py  sklearn_models.py  utils.py
galaxychop/core/: __init__.py  data.py  plot.py  sdynamics.py
galaxychop/dataset/: __init__.py  potential_gas_ID_394242.npy  potential_star_ID_394242.npy  star_ID_394242.npy
galaxychop/datasets/: __init__.py
galaxychop/models/: __init__.py  _base.py  _gaussian_mixture.py  _histogram.py  _kmeans.py  _threshold.py  clustering_methods.py  gaussian_mixture.py  histogram.py  internal_evaluation.py  kmeans.py  threshold.py
galaxychop/preproc/: __init__.py  _align.py  _circ.py  center.py  circ.py  gridsearch.py  pcenter.py  potential_energy.py  salign.py  smr_crop.py
galaxychop/preproc/C/: potencial.c
galaxychop/preproc/c/: utils.py
galaxychop/preproc/fortran/: __init__.py  potential.f90  potential.f95
galaxychop/preproc/potentials/: readme.txt
galaxychop/utils/: __init__.py  _align.py  _center.py  _circ.py  _decorators.py  _potential.py  decorators.py
galaxychop/utils/fortran/: __init__.py  potential.f95
legacy/: draft.py  test_data_potential_generator.py  units_test.ipynb
legacy_test/: conftest.py  test_core.py  test_utils.py
legacy_test/test_data/: save_mock_particles.py
legacy_test/test_data/real/: potential_dark_ID_394242.npy
resource/: potential  potential.f90  potential_TNG.f90  potential_test.f90
tests/: Test_Input.py  conftest.py  test_constants.py  test_core.py  test_data.py  test_dataset.py  test_input.py  test_io.py  test_methods.py  test_models.py  test_plot.py  test_potential.py  test_preproc.py  test_utils.py
tests/core/: test_data.py  test_plot.py  test_sdynamics.py
tests/datasets/: potential_star_ID_394242.npy
tests/models/: test_base.py  test_gaussian_mixture.py  test_histogram.py  test_kmeans.py  test_threshold.py
tests/preproc/: test_circ.py  test_pcenter.py  test_potential_energy.py  test_preproc.py  test_salign.py  test_smr_crop.py
tests/test_data/: dark_ID_394242.npy  gas_ID_394242.npy  potential_dark_ID_394242.npy  potential_gas_ID_394242.npy  star_ID_394242.npy
tests/test_data/real/: potential_dark_ID_394242.npy  potential_gas_ID_394242.npy  potential_star_ID_394242.npy
tests/utils/: test_decorators.py
utils/: aling.py
