[tool.black]
line-length = 79
target-version = ['py38', 'py39']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
    "tests",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==58.4.0", "numpy"]

