[project]
name="galaxychop"
dynamic = ["version"]
description="Galaxy dynamic de-composition"
license={ file="LICENSE.txt" }


dependencies=[
    "numpy >= 1.13.3",
    "scipy >= 1.0",
    "scikit-learn",
    "astropy",
    "uttrs",
    "pandas",
    "h5py",
    "custom_inherit",
    "seaborn"
]

[tool.black]
line-length = 79
target-version = ['py38', 'py39']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "plot: marks tests as part of the integration with matplotlib slow (deselect with '-m \"not plots\"')",
    "model: marks tests as part model decomposition API (deselect with '-m \"not model\"')",
]
testpaths = [
    "tests",
]

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}

[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",
    "setuptools>=42",
    "ninja; platform_system!='Windows'",
    "numpy",
    "wheel"
]
